# PCS2026_leonardoballista

./: provagit.txt
esercitazione1/: programma.cpp  temp.txt  temperature.cpp
esercitazione2/: CMakeLists.txt  esercizio_algoritmi.cpp  figura1.cpp
esercitazione3/: CMakeLists.txt  frazioni.cpp  rational.hpp
esercitazione4/: CMakeLists.txt  measure_sorts.cpp  sorts.hpp  test_bubblesort.cpp  test_insertionsort.cpp
esercitazione5/: CMakeLists.txt  GRAFICI E OSSERVAZIONI.md  GRAFICI_E_OSSERVAZIONI.md  measure_sorts.cpp  precise_measure.cpp  sorts.hpp  test_mergesort.cpp  test_optsort.cpp  test_quicksort.cpp  test_selectionsort.cpp
esercitazione6/: CMakeLists.txt  build_graph.cpp  graph.hpp
esercitazione7/: CMakeLists.txt  bfs_tree.dot  build_graph.cpp  dfs_tree.dot  grafo.dot  grafo2.dot  methods.hpp  rec_dfs_tree.dot
